add search rooms
